--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.13.5",
-    "@emotion/styled": "^11.13.5",
-    "@mui/icons-material": "^6.1.8",
-    "@mui/material": "^6.1.8",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^6.4.12",
+    "@mui/lab": "^6.0.1-beta.35",
+    "@mui/material": "^6.4.12",
     "@reduxjs/toolkit": "^2.4.0",
     "emoji-picker-react": "^4.12.0",
     "next": "15.0.3",
