--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^6.4.12",
     "@reduxjs/toolkit": "^2.4.0",
     "emoji-picker-react": "^4.12.0",
+    "jose": "^6.0.12",
     "next": "15.0.3",
     "node": "^20.18.1",
     "react": "^18.3.1",
