--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/lab": "^6.0.1-beta.35",
     "@mui/material": "^6.4.12",
     "@reduxjs/toolkit": "^2.4.0",
+    "date-fns": "^4.1.0",
     "emoji-picker-react": "^4.12.0",
     "jose": "^6.0.12",
     "next": "15.0.3",
